# sok-collusion

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  SoK_ Threat Models.xlsx  pyproject.toml  setup.sh
DtRecon_MemAttDistInf/: aia_image.py  cifar_recon.py  common.py  dia_image.py  face_common.py  face_recon.py  face_targets.py  generate_teeval_tables.py  mia_overlap.py  prep_celeba.py  run_all.sh  run_minimal.sh  run_smoke_test.sh
ModExt_DistInf/: check_celeba_attr_correlation.py  check_celeba_subsample.py  check_utkface_attr_correlation.py  check_utkface_subsample.py  generate_collusion_table.py  generate_table.py  modext_distinf.py  run_all_celeba_ratio045.sh  run_all_celeba_ratio0475.sh  run_all_utkface.sh  run_experiments_045.sh  run_experiments_0475.sh  run_experiments_utkface.sh  run_minimal_full.sh  run_smoke_test.sh
ModExt_DistInf/extra_scripts/: check_celeba_attr_correlation.py  check_celeba_subsample.py  check_utkface_attr_correlation.py  check_utkface_subsample.py
Pois_ModExt/: generate_table.py  pois_modext.py  run_all.sh  run_minimal_full.sh  run_smoke_test.sh
